Modify from spring-jpa to spring-jdbc, add CRUD options